--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "type": "module",
+  "main": "src/main.ts",
   "scripts": {
     "dev": "vite",
     "build": "run-p type-check \"build-only {@}\" --",
@@ -17,6 +18,7 @@
   "dependencies": {
     "actioncable-vue": "^2.5.1",
     "axios": "^1.7.2",
+    "html2canvas": "^1.4.1",
     "pinia": "^2.1.7",
     "sass": "^1.43.4",
     "sass-loader": "^10.1.1",
