--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@types/three": "^0.166.0",
     "actioncable-vue": "^2.5.1",
     "axios": "^1.7.2",
     "html2canvas": "^1.4.1",
